add mail support

--- a/.development.env
+++ b/.development.env
@@ -3,3 +3,5 @@ PORT=3000
 DB_URI=mongodb://localhost:27017/TruthOrDare
 JWT_SECRET=secretkey
 JWT_EXPIRESIN=10h
+MAILDEV_INCOMING_USER=test
+MAILDEV_INCOMING_PASS=test
