--- a/.development.env
+++ b/.development.env
@@ -3,5 +3,7 @@ PORT=3000
 DB_URI=mongodb://localhost:27017/TruthOrDare
 JWT_SECRET=secretkey
 JWT_EXPIRESIN=10h
-MAILDEV_INCOMING_USER=test
-MAILDEV_INCOMING_PASS=test
+MAIL_HOST=smtp.ethereal.email
+MAIL_HOST_PORT=587
+MAIL_USER=watson.schulist@ethereal.email
+MAIL_PASS=52CdVV3kYRSAFSXeZU
