--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         
     # run unit tests    
       - name: unit tests
-        run: npm run test
+        run: npm run test:e2e
         
     # build     
       - name: build
