--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/mongoose": "^8.0.0",
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/passport-discord": "^0.1.4",
     "@types/passport-facebook": "^2.1.11",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
@@ -39,6 +40,7 @@
     "mongoose": "^5.13.6",
     "nodemailer": "^6.6.3",
     "passport": "^0.4.1",
+    "passport-discord": "^0.1.4",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
