--- a/.development.env
+++ b/.development.env
@@ -1,11 +1,26 @@
 #
 # DO NOT PUT PERSONAL DATA HERE
 #
+# PUT ALL YOUR REAL CONFIG WHILE DEVELOPING HERE
+# APPLICATION
 PORT=3000
+
+# DATABASE
 DB_URI=mongodb://localhost:27017/TruthOrDare
+
+# JWT
 JWT_SECRET=secretkey
 JWT_EXPIRESIN=10h
+
+# OAuth2
 GOOGLE_CLIENTID=
 GOOGLE_CLIENTKEY=
+GOOGLE_CALLBACK_URL=
+
 FACEBOOK_APPID=
 FACEBOOK_SECRET=
+FACEBOOK_CALLBACK_URL=
+
+DISCORD_CLIENT_ID=
+DISCORD_CLIENT_SECRET=
+DISCORD_CALLBACK_URL=
