--- a/.development.env
+++ b/.development.env
@@ -11,10 +11,12 @@ DB_URI=mongodb://localhost:27017/TruthOrDare
 # JWT
 JWT_SECRET=secretkey
 JWT_EXPIRESIN=10h
-SET_PAGE_LENGTH=50
 GOOGLE_CLIENTID=
 GOOGLE_CLIENTKEY=
 GOOGLE_CALLBACK_URL=
+
+# Set fetches
+SET_PAGE_LENGTH=50
 
 FACEBOOK_APPID=
 FACEBOOK_SECRET=
