--- a/.development.env
+++ b/.development.env
@@ -15,6 +15,9 @@ GOOGLE_CLIENTID=
 GOOGLE_CLIENTKEY=
 GOOGLE_CALLBACK_URL=
 
+# Email Verify Time to live (in ms)
+VERIFY_TTL=600000
+
 # Set fetches
 SET_PAGE_LENGTH=50
 
