implement password reset

--- a/.development.env
+++ b/.development.env
@@ -17,6 +17,7 @@ GOOGLE_CALLBACK_URL=
 
 # Email Verify Time to live (in ms)
 VERIFY_TTL=600000
+RESET_TTL=600000
 
 # Set fetches
 SET_PAGE_LENGTH=50
