mongodb now in pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,11 @@ jobs:
       - name: cache packages
         run: npm i  
         
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.6.0
+        with:
+          mongodb-version: ${{ matrix.mongodb-version }}
+        
     # run unit tests    
       - name: unit tests
         run: npm run test:e2e
