update MongoDB version in pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.6.0
         with:
-          mongodb-version: ${{ matrix.mongodb-version }}
+          mongodb-version: '5.0'
         
     # run unit tests    
       - name: unit tests
