--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,9 @@ jobs:
         
     # install/cache npm dependencies
       - name: cache packages
-        run: npm i  
+        run: npm i
         
+     #  Start MongoDB 
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.6.0
         with:
