--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,22 +13,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
         
+      # setup env
+      - name: create env
+        run: echo ${{ secrets.PIPELINE_ENV }}> .env
+        
     # install/cache npm dependencies
       - name: cache packages
         run: |
           npm i
-          echo "%{.env}"
         
      #  Start MongoDB 
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.6.0
         with:
           mongodb-version: '5.0'
-          
-    # setup env
-      - name: create env
-        run: echo $secrets.PIPELINE_ENV | base64 --decode > .env
-            
+                 
     # run unit tests    
       - name: unit tests
         run: npm run test:e2e
