--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,81 @@
-name: Build
+name: Test and Build
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
-  build:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        
-      # setup env
-      - name: create env
-        run: 'echo "$ENV_VALUES" > .env'
-        shell: bash
-        env:
-          ENV_VALUES: ${{secrets.PIPELINE_ENV}}
-        
-    # install/cache npm dependencies
-      - name: cache packages
-        run: |
-          npm i
-        
-     #  Start MongoDB 
-      - name: Start MongoDB
-        uses: supercharge/mongodb-github-action@1.6.0
+
+      # install/cache npm dependencies
+      - uses: actions/setup-node@v2
         with:
+          node-version: 14
+      - uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+      - run: npm install
+          
+  test:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+    
+     - uses: actions/checkout@v2
+     - uses: actions/setup-node@v2
+       with:
+         node-version: 14
+     - uses: actions/cache@v2
+       with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+    
+     #  Start MongoDB 
+     - name: Start MongoDB
+       uses: supercharge/mongodb-github-action@1.6.0
+       with:
           mongodb-version: '5.0'
-                 
-    # run unit tests    
-      - name: unit tests
-        run: npm run test:e2e
-        
+    
+     # setup env
+     - name: create env
+       run: 'echo "$ENV_VALUES" > .env'
+       shell: bash
+       env:
+        ENV_VALUES: ${{secrets.PIPELINE_ENV}}
+    
+     # run unit tests    
+     - name: end 2 end tests
+       run: npm run test:e2e
+    
+  build:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+    
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+         node-version: 14
+    - uses: actions/cache@v2
+      with:
+          path: node_modules
+          key: node-modules-${{ hashFiles('package-lock.json') }}
+    
     # build     
-      - name: build
-        run: npm run build
+    - name: build
+      run: npm run build
         
     # save build as artifact
-      - name: Archive production artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: dist with env vars
-          path: |
-            dist
-            dev.env
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: dist with env vars
+        path: |
+          dist
+          dev.env
