Add HOST to example env

--- a/.development.env
+++ b/.development.env
@@ -4,6 +4,7 @@
 # PUT ALL YOUR REAL CONFIG WHILE DEVELOPING HERE
 # APPLICATION
 PORT=3000
+HOST=http://localhost:3000
 
 # DATABASE
 DB_URI=mongodb://localhost:27017/TruthOrDare
