--- a/package.json
+++ b/package.json
@@ -1,101 +1,101 @@
 {
-  "name": "truth-or-dare",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./jest-e2e.json",
-    "seed": "node dist/seeder",
-    "seed:refresh": "cross-env NODE_OPTIONS=--max-old-space-size=8192 node dist/seeder --refresh"
-  },
-  "dependencies": {
-    "@nestjs-modules/mailer": "^1.6.0",
-    "@nestjs/common": "^8.2.0",
-    "@nestjs/config": "^1.1.0",
-    "@nestjs/core": "^8.2.0",
-    "@nestjs/jwt": "^8.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/mongoose": "^8.0.1",
-    "@nestjs/passport": "^8.0.1",
-    "@nestjs/platform-express": "^8.2.0",
-    "@nestjs/swagger": "^5.1.4",
-    "@types/faker": "^5.5.9",
-    "@types/passport-discord": "^0.1.5",
-    "@types/passport-facebook": "^2.1.11",
-    "bcrypt": "^5.0.1",
-    "class-transformer": "^0.4.0",
-    "class-validator": "^0.13.1",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "mongoose": "^6.0.12",
-    "nestjs-seeder": "^0.2.0",
-    "nodemailer": "^6.7.0",
-    "passport": "^0.4.1",
-    "passport-discord": "^0.1.4",
-    "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.4.0",
-    "swagger-ui-express": "^4.1.6"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^8.1.4",
-    "@nestjs/schematics": "^8.0.4",
-    "@nestjs/testing": "^8.2.0",
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.11.6",
-    "@types/passport-google-oauth20": "^2.0.11",
-    "@types/passport-jwt": "^3.0.6",
-    "@types/passport-local": "^1.0.34",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "eslint": "^7.30.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "jest": "27.0.6",
-    "prettier": "^2.4.1",
-    "supertest": "^6.1.6",
-    "ts-jest": "^27.0.7",
-    "ts-loader": "^9.2.6",
-    "ts-node": "^10.4.0",
-    "tsconfig-paths": "^3.11.0",
-    "typescript": "^4.4.4"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+    "name": "truth-or-dare",
+    "version": "0.0.1",
+    "description": "",
+    "author": "",
+    "private": true,
+    "license": "UNLICENSED",
+    "scripts": {
+        "prebuild": "rimraf dist",
+        "build": "nest build",
+        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "start": "nest start",
+        "start:dev": "nest start --watch",
+        "start:debug": "nest start --debug --watch",
+        "start:prod": "node dist/main",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:cov": "jest --coverage",
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+        "test:e2e": "jest --config ./jest-e2e.json --runInBand --forceExit",
+        "seed": "node dist/seeder",
+        "seed:refresh": "cross-env NODE_OPTIONS=--max-old-space-size=8192 node dist/seeder --refresh"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+    "dependencies": {
+        "@nestjs-modules/mailer": "^1.6.0",
+        "@nestjs/common": "^8.2.0",
+        "@nestjs/config": "^1.1.0",
+        "@nestjs/core": "^8.2.0",
+        "@nestjs/jwt": "^8.0.0",
+        "@nestjs/mapped-types": "*",
+        "@nestjs/mongoose": "^8.0.1",
+        "@nestjs/passport": "^8.0.1",
+        "@nestjs/platform-express": "^8.2.0",
+        "@nestjs/swagger": "^5.1.4",
+        "@types/faker": "^5.5.9",
+        "@types/passport-discord": "^0.1.5",
+        "@types/passport-facebook": "^2.1.11",
+        "bcrypt": "^5.0.1",
+        "class-transformer": "^0.4.0",
+        "class-validator": "^0.13.1",
+        "dotenv": "^10.0.0",
+        "ejs": "^3.1.6",
+        "mongoose": "^6.0.12",
+        "nestjs-seeder": "^0.2.0",
+        "nodemailer": "^6.7.0",
+        "passport": "^0.4.1",
+        "passport-discord": "^0.1.4",
+        "passport-facebook": "^3.0.0",
+        "passport-google-oauth20": "^2.0.0",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
+        "reflect-metadata": "^0.1.13",
+        "rimraf": "^3.0.2",
+        "rxjs": "^7.4.0",
+        "swagger-ui-express": "^4.1.6"
+    },
+    "devDependencies": {
+        "@nestjs/cli": "^8.1.4",
+        "@nestjs/schematics": "^8.0.4",
+        "@nestjs/testing": "^8.2.0",
+        "@types/bcrypt": "^5.0.0",
+        "@types/express": "^4.17.13",
+        "@types/jest": "^26.0.24",
+        "@types/node": "^16.11.6",
+        "@types/passport-google-oauth20": "^2.0.11",
+        "@types/passport-jwt": "^3.0.6",
+        "@types/passport-local": "^1.0.34",
+        "@types/supertest": "^2.0.11",
+        "@typescript-eslint/eslint-plugin": "^4.33.0",
+        "@typescript-eslint/parser": "^4.33.0",
+        "eslint": "^7.30.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.1",
+        "jest": "27.0.6",
+        "prettier": "^2.4.1",
+        "supertest": "^6.1.6",
+        "ts-jest": "^27.0.7",
+        "ts-loader": "^9.2.6",
+        "ts-node": "^10.4.0",
+        "tsconfig-paths": "^3.11.0",
+        "typescript": "^4.4.4"
+    },
+    "jest": {
+        "moduleFileExtensions": [
+            "js",
+            "json",
+            "ts"
+        ],
+        "rootDir": "src",
+        "testRegex": ".*\\.spec\\.ts$",
+        "transform": {
+            "^.+\\.(t|j)s$": "ts-jest"
+        },
+        "collectCoverageFrom": [
+            "**/*.(t|j)s"
+        ],
+        "coverageDirectory": "../coverage",
+        "testEnvironment": "node"
+    }
 }
