--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "mongoose": "^6.0.12",
         "nestjs-seeder": "^0.2.0",
         "nodemailer": "^6.7.0",
+        "nodemailer-mock": "^1.5.11",
         "passport": "^0.4.1",
         "passport-discord": "^0.1.4",
         "passport-facebook": "^3.0.0",
