--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "class-validator": "^0.13.1",
         "dotenv": "^10.0.0",
         "ejs": "^3.1.6",
+        "mongodb-memory-server": "^8.0.4",
         "mongoose": "^6.0.13",
         "nestjs-seeder": "^0.2.0",
         "nodemailer": "^6.7.1",
