add config for prettier and eslint

--- a/package.json
+++ b/package.json
@@ -102,5 +102,13 @@
         ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "**/*.(t|j)s": "eslint --cache --fix"
     }
 }
