Edit settings for prettier on save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,8 @@
-{"typescript.preferences.importModuleSpecifier": "relative"}
+{
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "typescript.preferences.importModuleSpecifier": "relative",
+    "[typescript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode",
+    },
+}
