--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,30 +52,8 @@ jobs:
      # run unit tests    
      - name: end 2 end tests
        run: npm run test:e2e
-    
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-    
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v2
-      with:
-         node-version: 14
-    - uses: actions/cache@v2
-      with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('package-lock.json') }}
-    
-    # build     
-    - name: build
-      run: npm run build
-        
-    # save build as artifact
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist with env vars
-        path: |
-          dist
-          dev.env
+       
+     - name: Upload coverage to Codecov
+       uses: codecov/codecov-action@v1
+       with:
+        token: ${{ secrets.CODECOV_SECRET }}
