--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,4 +5,7 @@
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
     },
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": true
+    }
 }
