slight docker adjustments

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,9 @@
 version: "3.7"
 services:
-  backend-server:
-    container_name: wop-backend-server
-    image: wop-backend
-    command: sh -c "npm run start"
+  backend:
+    container_name: wop-backend
+    image: coffeemakingtoaster/wop-backend
     restart: always
-    build: 
-      context: ./
-      dockerfile: Dockerfile
-      target: full
-    ports:
-      - "${DOCKER_PORT_OUT}:${DOCKER_PORT_IN}"
     links:
       - mongo
     depends_on:
