--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy 
 
 on:
-  pull:
+  pull_request:
     branches:
       - 'stable'
   push:
@@ -9,7 +9,7 @@ on:
       - 'stable'
       
  
- jobs:
+jobs:
   test:
   # Making sure this really is...well stable. Deploying a faulty version would be fatal
     name: End 2 End Tests
@@ -34,40 +34,40 @@ on:
       - name: end 2 end tests
         run: npm run test:e2e
         
-    docker-push:
-      name: Push to docker hub
-      runs-on: ubuntu:latest
-      needs: [test]
-      env:
-        REPO: ${{secrets.DOCKER_REPO}}
-      steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-node@v2
+  docker-push:
+    name: Push to docker hub
+    runs-on: ubuntu:latest
+    needs: [test]
+    env:
+      REPO: ${{secrets.DOCKER_REPO}}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
         
-        - name: create deploy env
-          run: 'echo "$ENV_VALUES" > .env'
-          shell: bash
-          env:
-            ENV_VALUES: ${{secrets.DEPLOY_ENV}}
+      - name: create deploy env
+        run: 'echo "$ENV_VALUES" > .env'
+        shell: bash
+        env:
+          ENV_VALUES: ${{secrets.DEPLOY_ENV}}
         
-        - name: docker hub login
-          run: docker login -u ${{ secrets.DOCKER_USER }} 
+      - name: docker hub login
+        run: docker login -u ${{ secrets.DOCKER_USER }} 
              -p ${{ secrets.DOCKER_PASS }}
         
-        - name: build Docker image
-          run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+      - name: build Docker image
+        run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
 
-        - name: Publish docker image
-          run: docker push $REPO
+      - name: Publish docker image
+        run: docker push $REPO
 
-    redeploy:
-      - name: Call redeploy webhook
-        runs-on: ubuntu:latest
-        needs: [docker-push]
-        steps:
-          - name: Deploy docker container webhook
-            uses: joelwmale/webhook-action@master
-            env:
-          WEBHOOK_URL: ${{ secrets.DEPLOY_WEBHOOK_URL  }}
+  redeploy:
+      name: Call redeploy webhook
+      runs-on: ubuntu:latest
+      needs: [docker-push]
+      steps:
+        - name: Deploy docker container webhook
+          uses: joelwmale/webhook-action@master
+          env:
+            WEBHOOK_URL: ${{ secrets.DEPLOY_WEBHOOK_URL  }}
 
     
