--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,6 @@ jobs:
         - name: Deploy docker container webhook
           uses: joelwmale/webhook-action@master
           env:
-            WEBHOOK_URL: ${{ secrets.DEPLOY_WEBHOOK_URL  }}
+            WEBHOOK_URL: ${{ secrets.DEPLOY_WEBHOOK  }}
 
     
