--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,9 +20,9 @@ services:
     ports:
       - "27017:27017"
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=nextparty
-      - MONGO_INITDB_ROOT_PASSWORD=5VSHcAVBhFw
-      - MONGO_INITDB_DATABASE=wop
+      - MONGO_INITDB_ROOT_USERNAME=
+      - MONGO_INITDB_ROOT_PASSWORD=
+      - MONGO_INITDB_DATABASE=
     logging:
       driver: "none"
 
