--- a/package.json
+++ b/package.json
@@ -18,36 +18,36 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./jest-e2e.json --runInBand",
+        "test:e2e": "jest --config ./jest-e2e.json",
         "seed": "node dist/seeder",
         "seed:refresh": "cross-env NODE_OPTIONS=--max-old-space-size=8192 node dist/seeder --refresh",
         "prepare": "husky install"
     },
     "dependencies": {
-        "@nestjs-modules/mailer": "^1.6.0",
-        "@nestjs/common": "^8.2.2",
-        "@nestjs/config": "^1.1.0",
-        "@nestjs/core": "^8.2.2",
+        "@nestjs-modules/mailer": "^1.6.1",
+        "@nestjs/common": "^8.2.5",
+        "@nestjs/config": "^1.1.6",
+        "@nestjs/core": "^8.2.5",
         "@nestjs/jwt": "^8.0.0",
-        "@nestjs/mapped-types": "*",
+        "@nestjs/mapped-types": "^1.0.1",
         "@nestjs/mongoose": "^9.0.2",
-        "@nestjs/passport": "^8.0.1",
-        "@nestjs/platform-express": "^8.2.2",
+        "@nestjs/passport": "^8.1.0",
+        "@nestjs/platform-express": "^8.2.5",
         "@nestjs/swagger": "^5.1.5",
         "@types/faker": "^5.5.9",
         "@types/passport-discord": "^0.1.5",
         "@types/passport-facebook": "^2.1.11",
         "bcrypt": "^5.0.1",
-        "class-transformer": "^0.4.0",
+        "class-transformer": "^0.5.1",
         "class-validator": "^0.13.1",
-        "dotenv": "^10.0.0",
+        "dotenv": "^11.0.0",
         "ejs": "^3.1.6",
-        "mongodb-memory-server": "^8.0.4",
-        "mongoose": "^6.1.4",
+        "mongodb-memory-server": "^8.1.0",
+        "mongoose": "^6.1.6",
         "nestjs-seeder": "^0.2.0",
-        "nodemailer": "^6.7.1",
+        "nodemailer": "^6.7.2",
         "nodemailer-mock": "^1.5.11",
-        "passport": "^0.4.1",
+        "passport": "^0.5.2",
         "passport-discord": "^0.1.4",
         "passport-facebook": "^3.0.0",
         "passport-google-oauth20": "^2.0.0",
@@ -55,37 +55,37 @@
         "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
-        "rxjs": "^7.4.0",
+        "rxjs": "^7.5.2",
         "swagger-ui-express": "^4.1.6"
     },
     "devDependencies": {
-        "@nestjs/cli": "^8.1.5",
+        "@nestjs/cli": "^8.2.0",
         "@nestjs/schematics": "^8.0.5",
-        "@nestjs/testing": "^8.2.2",
+        "@nestjs/testing": "^8.2.5",
         "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
-        "@types/jest": "^26.0.24",
-        "@types/node": "^16.11.9",
+        "@types/jest": "^27.4.0",
+        "@types/node": "^17.0.8",
         "@types/passport-google-oauth20": "^2.0.11",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
         "@types/supertest": "^2.0.11",
-        "@typescript-eslint/eslint-plugin": "^4.33.0",
-        "@typescript-eslint/parser": "^4.33.0",
-        "eslint": "^7.30.0",
+        "@typescript-eslint/eslint-plugin": "^5.9.1",
+        "@typescript-eslint/parser": "^5.9.1",
+        "eslint": "^8.6.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-nestjs": "^1.2.3",
-        "eslint-plugin-prettier": "^3.4.1",
+        "eslint-plugin-prettier": "^4.0.0",
         "husky": "^7.0.4",
-        "jest": "27.0.6",
-        "lint-staged": "^12.1.3",
+        "jest": "^27.4.7",
+        "lint-staged": "^12.1.7",
         "passport-custom": "^1.1.1",
-        "prettier": "^2.4.1",
-        "supertest": "^6.1.6",
-        "ts-jest": "^27.0.7",
+        "prettier": "^2.5.1",
+        "supertest": "^6.2.1",
+        "ts-jest": "^27.1.2",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
-        "tsconfig-paths": "^3.11.0",
+        "tsconfig-paths": "^3.12.0",
         "typescript": "^4.5.2"
     },
     "jest": {
