--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.5.2",
+        "slugify": "^1.6.5",
         "swagger-ui-express": "^4.1.6"
     },
     "devDependencies": {
