--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,9 @@ jobs:
      - name: end 2 end tests
        run: npm run test:e2e
        
+     - name: unit tests
+       run: npm run test
+       
      - name: Upload coverage to Codecov
        uses: codecov/codecov-action@v1
        with:
