--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "class-validator": "^0.13.1",
         "dotenv": "^11.0.0",
         "ejs": "^3.1.6",
+        "googleapis": "^92.0.0",
         "mongodb-memory-server": "^8.1.0",
         "mongoose": "^6.1.6",
         "nestjs-seeder": "^0.2.0",
