--- a/package.json
+++ b/package.json
@@ -34,10 +34,9 @@
         "@nestjs/passport": "^8.1.0",
         "@nestjs/platform-express": "^8.2.5",
         "@nestjs/swagger": "^5.1.5",
+        "@types/bcryptjs": "^2.4.2",
         "@types/faker": "^5.5.9",
-        "@types/passport-discord": "^0.1.5",
-        "@types/passport-facebook": "^2.1.11",
-        "bcrypt": "^5.0.1",
+        "bcryptjs": "^2.4.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.1",
         "dotenv": "^11.0.0",
@@ -49,8 +48,6 @@
         "nodemailer": "^6.7.2",
         "nodemailer-mock": "^1.5.11",
         "passport": "^0.5.2",
-        "passport-discord": "^0.1.4",
-        "passport-facebook": "^3.0.0",
         "passport-google-oauth20": "^2.0.0",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
@@ -64,7 +61,6 @@
         "@nestjs/cli": "^8.2.0",
         "@nestjs/schematics": "^8.0.5",
         "@nestjs/testing": "^8.2.5",
-        "@types/bcrypt": "^5.0.0",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.4.0",
         "@types/node": "^17.0.8",
