--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@nestjs/passport": "^8.1.0",
         "@nestjs/platform-express": "^8.2.5",
         "@nestjs/swagger": "^5.1.5",
+        "@nestjs/throttler": "^2.0.1",
         "@types/bcryptjs": "^2.4.2",
         "@types/faker": "^5.5.9",
         "bcryptjs": "^2.4.3",
