--- a/package.json
+++ b/package.json
@@ -24,67 +24,68 @@
         "prepare": "husky install"
     },
     "dependencies": {
-        "@nestjs/common": "^8.2.5",
-        "@nestjs/config": "^1.1.6",
-        "@nestjs/core": "^8.2.5",
-        "@nestjs/jwt": "^8.0.0",
-        "@nestjs/mapped-types": "^1.0.1",
-        "@nestjs/mongoose": "^9.0.2",
-        "@nestjs/passport": "^8.1.0",
-        "@nestjs/platform-express": "^8.2.5",
-        "@nestjs/swagger": "^5.1.5",
-        "@nestjs/throttler": "^2.0.1",
+        "@nestjs/common": "^9.1.2",
+        "@nestjs/config": "^2.2.0",
+        "@nestjs/core": "^9.1.2",
+        "@nestjs/jwt": "^9.0.0",
+        "@nestjs/mapped-types": "^1.1.0",
+        "@nestjs/mongoose": "^9.2.0",
+        "@nestjs/passport": "^9.0.0",
+        "@nestjs/platform-express": "^9.1.2",
+        "@nestjs/swagger": "^6.1.2",
+        "@nestjs/throttler": "^3.0.0",
         "@types/bcryptjs": "^2.4.2",
         "@types/faker": "^6.6.9",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.5.1",
-        "class-validator": "^0.13.1",
+        "class-validator": "^0.13.2",
         "dotenv": "^16.0.2",
         "ejs": "^3.1.8",
-        "googleapis": "^92.0.0",
-        "mongodb-memory-server": "^8.9.2",
-        "mongoose": "^6.1.6",
+        "googleapis": "^108.0.0",
+        "mongodb-memory-server": "^8.9.3",
+        "mongoose": "^6.6.2",
         "nestjs-seeder": "^0.2.0",
-        "nodemailer": "^6.7.8",
-        "nodemailer-mock": "^1.5.11",
-        "passport": "^0.5.2",
+        "nodemailer": "^6.8.0",
+        "nodemailer-mock": "^1.5.12",
+        "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
         "passport-jwt": "^4.0.0",
         "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
-        "rxjs": "^7.5.6",
+        "rxjs": "^7.5.7",
         "slugify": "^1.6.5",
         "swagger-ui-express": "^4.5.0"
     },
     "devDependencies": {
-        "@nestjs/cli": "^8.2.0",
-        "@nestjs/schematics": "^8.0.5",
-        "@nestjs/testing": "^8.2.5",
-        "@types/express": "^4.17.13",
-        "@types/jest": "^27.4.0",
-        "@types/node": "^17.0.8",
+        "@nestjs/cli": "^9.1.4",
+        "@nestjs/schematics": "^9.0.3",
+        "@nestjs/testing": "^9.1.2",
+        "@types/express": "^4.17.14",
+        "@types/jest": "^29.1.0",
+        "@types/node": "^18.7.23",
         "@types/passport-google-oauth20": "^2.0.11",
         "@types/passport-jwt": "^3.0.6",
         "@types/passport-local": "^1.0.34",
         "@types/supertest": "^2.0.12",
-        "@typescript-eslint/eslint-plugin": "^5.9.1",
-        "@typescript-eslint/parser": "^5.36.2",
-        "eslint": "^8.6.0",
+        "@typescript-eslint/eslint-plugin": "^5.38.1",
+        "@typescript-eslint/parser": "^5.38.1",
+        "eslint": "^8.24.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-nestjs": "^1.2.3",
         "eslint-plugin-prettier": "^4.2.1",
-        "husky": "^7.0.4",
-        "jest": "^27.4.7",
+        "husky": "^8.0.1",
+        "jest": "^29.1.1",
         "lint-staged": "^13.0.3",
+        "npm-check-updates": "^16.3.3",
         "passport-custom": "^1.1.1",
         "prettier": "^2.7.1",
         "supertest": "^6.2.4",
-        "ts-jest": "^27.1.2",
-        "ts-loader": "^9.2.6",
-        "ts-node": "^10.4.0",
+        "ts-jest": "^29.0.3",
+        "ts-loader": "^9.4.1",
+        "ts-node": "^10.9.1",
         "tsconfig-paths": "^4.1.0",
-        "typescript": "^4.5.2"
+        "typescript": "^4.8.4"
     },
     "jest": {
         "moduleFileExtensions": [
