--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,9 @@
-name: Deploy
+name: Backend-Pipeline
 
 on:
-    pull_request:
-        branches:
-            - 'stable'
-    push:
-        branches:
-            - 'stable'
+  push:
+  pull_request:
+    branches: [main]
 
 jobs:
     test:
@@ -17,7 +14,7 @@ jobs:
             - uses: actions/checkout@v3
             - uses: actions/setup-node@v3
               with:
-                  node-version: 14
+                  node-version: 18
 
             # setup env
             - name: create env
@@ -29,40 +26,55 @@ jobs:
             - name: node modules
               run: 'npm i'
 
-            # run unit tests
+            # run e2e tests
             - name: end 2 end tests
               run: npm run test:e2e
 
-    docker-push:
-        name: Push to docker hub
+    docker-build-and-push:
         runs-on: ubuntu-latest
         needs: [test]
-        env:
-            REPO: ${{secrets.DOCKER_REPO}}
+        strategy:
+            matrix:
+                platform: ["linux/amd64", "linux/arm64"]
         steps:
-            - uses: actions/checkout@v3
-            - uses: actions/setup-node@v3
+          - name: Checkout
+            uses: actions/checkout@v3
 
-            - name: create deploy env
-              run: 'echo "$ENV_VALUES" > .env'
-              shell: bash
-              env:
-                  ENV_VALUES: ${{secrets.DEPLOY_ENV}}
+          - name: Set up Docker Buildx
+            uses: docker/setup-buildx-action@v2
 
-            - name: docker hub login
-              run: docker login -u ${{ secrets.DOCKER_USER }}
-                  -p ${{ secrets.DOCKER_PASS }}
+          # Arm support
+          - name: Set up QEMU
+            uses: docker/setup-qemu-action@v2
 
-            - name: build Docker image
-              run: docker build -t $REPO:latest -t $REPO:${GITHUB_SHA::8} .
+          # Extract branch name and replace / with _ as slashes are invalid as image tags
+          - name: Extract branch name
+            run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/} | tr '/' '_')"
+            id: extract_branch
 
-            - name: Publish docker image
-              run: docker push $REPO
+          - name: Login to GitHub Container Registry
+            uses: docker/login-action@v2
+            with:
+              registry: ghcr.io
+              username: ${{ github.repository_owner }}
+              password: ${{ secrets.GITHUB_TOKEN }}
 
+          - name: Build and push
+            uses: docker/build-push-action@v4
+            with:
+              context: .
+              tags: ghcr.io/dopeshot/nextparty/backend:${{ steps.extract_branch.outputs.branch }}
+              platforms: ${{ matrix.platform }}
+              push: true
+              labels: |
+                org.opencontainers.image.source: https://github.com/dopeshot/nextpartz.io-backend
+                org.opencontainers.image.description: Backend for nextparty
+                
     redeploy:
         name: Call redeploy webhook
         runs-on: ubuntu-latest
-        needs: [docker-push]
+        needs: [docker-build-and-push]
+        if: github.ref == 'refs/heads/stable'
         steps:
             - name: Deploy docker container webhook
               uses: joelwmale/webhook-action@master
