--- a/package.json
+++ b/package.json
@@ -20,72 +20,71 @@
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
         "test:e2e": "jest --config ./jest-e2e.json --runInBand",
         "seed": "node dist/seeder",
-        "seed:refresh": "cross-env NODE_OPTIONS=--max-old-space-size=8192 node dist/seeder --refresh",
-        "prepare": "husky install"
+        "seed:refresh": "cross-env NODE_OPTIONS=--max-old-space-size=8192 node dist/seeder --refresh"
     },
     "dependencies": {
-        "@nestjs/common": "^9.1.4",
-        "@nestjs/config": "^2.2.0",
-        "@nestjs/core": "^9.1.4",
-        "@nestjs/jwt": "^9.0.0",
-        "@nestjs/mapped-types": "^1.2.0",
-        "@nestjs/mongoose": "^9.2.0",
-        "@nestjs/passport": "^9.0.0",
-        "@nestjs/platform-express": "^9.1.4",
-        "@nestjs/swagger": "^6.1.2",
-        "@nestjs/throttler": "^3.1.0",
+        "@nestjs/common": "^9.4.0",
+        "@nestjs/config": "^2.3.1",
+        "@nestjs/core": "^9.4.0",
+        "@nestjs/jwt": "^10.0.3",
+        "@nestjs/mapped-types": "^1.2.2",
+        "@nestjs/mongoose": "^9.2.2",
+        "@nestjs/passport": "^9.0.3",
+        "@nestjs/platform-express": "^9.4.0",
+        "@nestjs/swagger": "^6.3.0",
+        "@nestjs/throttler": "^4.0.0",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.5.1",
-        "class-validator": "^0.13.2",
+        "class-validator": "^0.14.0",
         "dotenv": "^16.0.3",
-        "ejs": "^3.1.8",
-        "googleapis": "^108.0.0",
-        "mongodb-memory-server": "^8.9.3",
-        "mongoose": "^6.6.5",
-        "nestjs-seeder": "^0.3.0",
-        "nodemailer": "^6.8.0",
-        "nodemailer-mock": "^1.5.12",
+        "ejs": "^3.1.9",
+        "googleapis": "^118.0.0",
+        "mongoose": "^7.1.0",
+        "nestjs-seeder": "^0.3.1",
+        "nodemailer": "^6.9.1",
         "passport": "^0.6.0",
         "passport-google-oauth20": "^2.0.0",
-        "passport-jwt": "^4.0.0",
+        "passport-jwt": "^4.0.1",
         "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
-        "rimraf": "^3.0.2",
-        "rxjs": "^7.5.7",
-        "slugify": "^1.6.5",
-        "swagger-ui-express": "^4.5.0"
+        "rimraf": "^5.0.0",
+        "rxjs": "^7.8.1",
+        "slugify": "^1.6.6",
+        "swagger-ui-express": "^4.6.3"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/faker": "^6.6.9",
-        "@nestjs/cli": "^9.1.4",
-        "@nestjs/schematics": "^9.0.3",
-        "@nestjs/testing": "^9.1.4",
-        "@types/express": "^4.17.14",
-        "@types/jest": "^29.2.0",
-        "@types/node": "^18.11.2",
+        "@nestjs/cli": "^9.4.2",
+        "@nestjs/schematics": "^9.1.0",
+        "@nestjs/testing": "^9.4.0",
+        "@types/express": "^4.17.17",
+        "@types/jest": "^29.5.1",
+        "@types/node": "^20.1.2",
         "@types/passport-google-oauth20": "^2.0.11",
-        "@types/passport-jwt": "^3.0.7",
-        "@types/passport-local": "^1.0.34",
+        "@types/passport-jwt": "^3.0.8",
+        "@types/passport-local": "^1.0.35",
         "@types/supertest": "^2.0.12",
-        "@typescript-eslint/eslint-plugin": "^5.40.1",
-        "@typescript-eslint/parser": "^5.40.1",
-        "eslint": "^8.25.0",
-        "eslint-config-prettier": "^8.5.0",
+        "@typescript-eslint/eslint-plugin": "^5.59.5",
+        "@typescript-eslint/parser": "^5.59.5",
+        "mongodb-memory-server": "^8.12.2",
+        "nodemailer-mock": "^2.0.1",
+        "eslint": "^8.40.0",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-nestjs": "^1.2.3",
         "eslint-plugin-prettier": "^4.2.1",
-        "husky": "^8.0.1",
-        "jest": "^29.2.1",
-        "lint-staged": "^13.0.3",
-        "npm-check-updates": "^16.3.14",
+        "husky": "^8.0.3",
+        "jest": "^29.5.0",
+        "lint-staged": "^13.2.2",
+        "npm-check-updates": "^16.10.12",
         "passport-custom": "^1.1.1",
-        "prettier": "^2.7.1",
-        "supertest": "^6.3.0",
-        "ts-jest": "^29.0.3",
-        "ts-loader": "^9.4.1",
+        "prettier": "^2.8.8",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.0",
+        "ts-loader": "^9.4.2",
         "ts-node": "^10.9.1",
-        "tsconfig-paths": "^4.1.0",
-        "typescript": "^4.8.4"
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.0.4"
     },
     "jest": {
         "moduleFileExtensions": [
